testsuite/tests/regression/pr6608/pr6608_1.ml.reference

# Characters 1-3:
  {"" with contents=1};;
   ^^
Error: This expression has type string but an expression was expected of type
         'a ref
# 
